--- a/css/quick-contact.css
+++ b/css/quick-contact.css
@@ -1,83 +1,167 @@
-.quick-container {
-    vertical-align: center;
-    margin-left: 10%
-}
-
-.btn {
-    align-items: left;
-    padding: 15px 30px;
-    background-color: #FB141D;
-    color: #ffffff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.btn--keanu {
-    position: relative;
+.quick-contact,
+.quick-contact:before,
+.quick-contact:after {
+    box-sizing: border-box;
     z-index: 1;
-    transition: border-color .4s, color .4s;
-    backface-visibility: hidden;
-    border: 2px solid transparent;
-    color: #ffffff;
-}
-
-.btn--keanu:before {
-    /* Use ::before pseudo-element for overlay */
-    content: "";
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    /* Use rgba to set opacity */
-    z-index: 1;
-}
-
-.btn--keanu:hover {
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    background-color: #fb141c96;
-    color: #ffffff;
-}
-
-.btn--keanu:hover:before {
-    opacity: 0;
-    transform: scale3d(.7, 1, 1);
 }
 
 .quick-contact {
-    width: 400px;
-    height: 100%;
-    position: fixed;
-    right: -500px;
-    top: 0;
-    background: #f1f1f1ea;
+    height: 100vh;
+    background: #ccc;
+    overflow: hidden;
+}
+
+.modal-container {
+    margin: 60px auto;
+    padding-top: 0px;
+    position: relative;
+    width: 160px;
+}
+
+.modal-container .modal-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    color: #fff;
+    font-size: 140%;
+    font-weight: 400;
+    width: 200px;
+    height: 90px;
+    line-height: 50px;
+    background: #FB141D;
+    border: 0;
+    border-radius: 3px;
+    cursor: pointer;
+    text-align: center;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.modal-container .modal-btn:hover {
+    background: #fb141c96;
+}
+
+.model-container .modal-btn-inside {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    color: #fff;
+    width: 80px;
+    height: 40px;
+    line-height: 50px;
+    background: #FB141D;
+    border: 0;
+    border-radius: 3px;
+    cursor: pointer;
+    text-align: center;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.modal-container .modal-btn-inside:hover {
+    background: #fb141c96;
+}
+
+.modal-container .modal-content,
+.modal-container .modal-backdrop {
+    height: 0;
+    width: 0;
+    opacity: 0;
+    visibility: hidden;
+    overflow: hidden;
+    cursor: pointer;
+    transition: opacity 0.2s ease-in;
+}
+
+.modal-container .modal-content {
+    max-width: 1000px;
+    width: 100%;
+    max-height: 1000px;
     padding: 20px;
-    z-index: 9999;
-    transition-duration: 500ms;
-    transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+    overflow-y: auto;
 }
 
-.quick-show {
-    right: 0;
-}
 
-.quick-hidden {
+.modal-container .modal-close {
+    color: #aaa;
     position: absolute;
-    right: 0;
-    top: 0;
-    padding: 12px 20px;
+    right: 5px;
+    top: 5px;
+    padding-top: 3px;
+    background: #fff;
+    font-size: 16px;
+    width: 25px;
+    height: 25px;
+    font-weight: bold;
+    text-align: center;
     cursor: pointer;
 }
 
-.plus-item {
-    transform: rotate(45deg);
-    color: #062439;
-    text-transform: uppercase;
-    font-size: 1.5em;
+.modal-container .modal-close:hover {
+    color: #afafaf;
+}
+
+.modal-container .modal-content-btn {
+    position: absolute;
+    text-align: center;
+    cursor: pointer;
+    bottom: 20px;
+    right: 30px;
+    background: #FB141D;
+    color: #fff;
+    width: 50px;
+    border-radius: 3px;
+    height: 32px;
+    padding-top: 9px;
+}
+
+.modal-container .modal-content-btn:hover {
+    background-color: #fb141c96;
+}
+
+.modal-container #modal-toggle {
+    display: none;
+}
+
+.modal-container #modal-toggle.active~.modal-backdrop,
+.modal-container #modal-toggle:checked~.modal-backdrop {
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 0.2s ease-in;
+}
+
+.modal-container #modal-toggle.active~.modal-content,
+.modal-container #modal-toggle:checked~.modal-content {
+    opacity: 1;
+    background-color: #fff;
+    max-width: 400px;
+    width: 400px;
+    height: 280px;
+    padding: 10px 30px;
+    position: fixed;
+    left: calc(50% - 200px);
+    top: 12%;
+    border-radius: 4px;
+    z-index: 999;
+    pointer-events: auto;
+    cursor: auto;
+    visibility: visible;
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.6);
+}
+
+@media (max-width: 400px) {
+
+    .modal-container #modal-toggle.active~.modal-content,
+    .modal-container #modal-toggle:checked~.modal-content {
+        left: 0;
+    }
 }
 
 .title {
@@ -85,6 +169,7 @@
     text-transform: uppercase;
     font-size: 1.1em;
     margin-bottom: 30px;
+    margin-top: 100px;
 }
 
 form input,
@@ -93,9 +178,8 @@ form textarea {
     padding: 10px;
     margin: 5px 0;
     box-sizing: border-box;
-    background: #ffffff;
+    background: #fafafa;
     border: none;
-    font-family: 'Oswald', sans-serif;
     font-size: 16px;
     color: #062439;
     outline: none;
