--- a/css/text-fadein.css
+++ b/css/text-fadein.css
@@ -1,5 +1,5 @@
 .fade-in {
-  margin-top: 80px;
+  margin-top: 30px;
   padding: 0;
   height: 200px;
   display: flex;
@@ -9,7 +9,7 @@
   background-size: cover;
 }
 
-.fade-in .container {
+.fade-in .title-container {
   width: 100%;
   height: center;
   background: #FB141D34;
