--- a/css/submit.css
+++ b/css/submit.css
@@ -169,7 +169,7 @@
     width: 150px;
     height: 50px;
     border-radius: 25px;
-    background: #FB141D;
+    background: #D93A40;
     position: absolute;
 }
 
