--- a/css/quick-contact.css
+++ b/css/quick-contact.css
@@ -29,7 +29,7 @@
     width: 200px;
     height: 90px;
     line-height: 50px;
-    background: #FB141D;
+    background: #D93A40;
     border: 0;
     border-radius: 3px;
     cursor: pointer;
@@ -50,7 +50,7 @@
     width: 80px;
     height: 40px;
     line-height: 50px;
-    background: #FB141D;
+    background: #D93A40;
     border: 0;
     border-radius: 3px;
     cursor: pointer;
@@ -107,7 +107,7 @@
     cursor: pointer;
     bottom: 20px;
     right: 30px;
-    background: #FB141D;
+    background: #D93A40;
     color: #fff;
     width: 50px;
     border-radius: 3px;
