--- a/css/text-fadein.css
+++ b/css/text-fadein.css
@@ -12,7 +12,7 @@
 .fade-in .title-container {
   width: 100%;
   height: center;
-  background: #FB141D34;
+  background: #0624392c;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,7 +35,7 @@
       .block {
         width: 0%;
         height: inherit;
-        background: #FB141D;
+        background: #D93A40;
         position: absolute;
         animation: mainBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
         display: flex;
@@ -60,7 +60,7 @@
           -moz-border-radius: 50%;
           border-radius: 50%;
 
-          background: #FB141D;
+          background: #D93A40;
           -webkit-animation: load 0.6s cubic-bezier(.74, .06, .4, .92) forwards;
           animation: popIn 0.8s cubic-bezier(.74, .06, .4, .92) forwards;
           animation-delay: 2s;
@@ -85,7 +85,7 @@
       .block {
         width: 0%;
         height: inherit;
-        background: #FB141D;
+        background: #D93A40;
         position: absolute;
         animation: secBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
         animation-delay: 2s;
@@ -159,7 +159,7 @@
   0% {
     width: 0px;
     height: 0px;
-    background: #FB141D;
+    background: #D93A40;
     border: 0px solid #ffffff;
     opacity: 0;
   }
@@ -167,7 +167,7 @@
   50% {
     width: 20px;
     height: 20px;
-    background: #FB141D;
+    background: #D93A40;
     opacity: 1;
     bottom: 80px;
   }
@@ -188,7 +188,7 @@
   100% {
     width: 10px;
     height: 10px;
-    background: #FB141D;
+    background: #D93A40;
     border: 0px solid #000000;
     bottom: 20px;
 
